code refractor